- Added: Parameter d_dis_servicep/Disable all service points, including FARPs (no refuel, no repair, no rearm)
- Added: Fires at main targets
- Added: Parameter d_playerspectateatbase (Player can spectate other players at base flag), default 0 or Yes
- Changed: CAS with very short cooldown (90 secs) if artillery is set to unlimited, by longtimegamer
- Changed: Added visibility check for player and AI names over the head, means, players see the names above head if the unit is visible and not all the time
- Changed: Maintarget prisoner event now has a suicide bomb if the rescue is botched, by longtimegamer
- Changed: Enemy AI vehicle island patrols are back
- Changed: You can now disable ACE medical system and use the internal mission Revive when ACE is running (d_ACEMedicalR in description.ext, "Disable ACE medical revive (if ACE is used) and use mission revive" in lobby, finally in, somehow got lost before)
- Changed: SAT View removed from MHQs in the TT version (enemy could spott opponent MHQ too easily)
- Changed: Removed the marker tiles at main targets in the TT version, back to solid filled circle again
- Changed: If ACE is used the mission pylon loadout dialog is disabled and you have to use the ACE pylon dialog (razorclam wanted it so blame him for it :)
- Changed: Enemy mobile HQs are now spawned with snipers on the roof
- Changed: If d_MTTowerSatchelsOnly if set to 1 (disabled) then it there is no satchel check for main target radio tower, main target side mission, main target barracks and mobile MHQ
- Changed: Reduced radius of many addActions
- Changed: ToolKit and MineDetector are now always available, no matter which version is beeing played
- Changed: You may encounter divers at naval mines side missions now
- Changed: MHQs should now be added automatically to the list of vehicles which can load an ammo box at an ammo point
- Changed: Removed T-14 from RHS version (seems too be not ready yet)