@@ -18,6 +18,7 @@ ATTENTION: The following mission file(s) has/have changed: TT Malden, Altis Bluf
 - Added: Parameter d_dis_servicep/Disable all service points, including FARPs (no refuel, no repair, no rearm)
 - Added: Fires at main targets
 - Added: Parameter d_playerspectateatbase (Player can spectate other players at base flag), default 0 or Yes
+- Added: Parameter d_score_needed_to_fly (Flying choppers and planes only allowed when a player has a score higher than:), only available when a SQL database is running, kicks player out of planes and choppers if score is too low (default 1000)
 - Changed: CAS with very short cooldown (90 secs) if artillery is set to unlimited, by longtimegamer
 - Changed: Added visibility check for player and AI names over the head, means, players see the names above head if the unit is visible and not all the time
 - Changed: Maintarget prisoner event now has a suicide bomb if the rescue is botched, by longtimegamer
