@@ -926,9 +926,16 @@ default = 7;
 
 	class d_AutoKickTime {
 		title = "$STR_DOM_MISSIONSTRING_1107";
-		values[] = {0,60, 300, 600, 1800,3600};
+		values[] = {0, 60, 300, 600, 1800, 3600};
 		default = 1800;
 		texts[] = {"$STR_DOM_MISSIONSTRING_1077","$STR_DOM_MISSIONSTRING_1106","$STR_DOM_MISSIONSTRING_1078","$STR_DOM_MISSIONSTRING_1079","$STR_DOM_MISSIONSTRING_1080","$STR_DOM_MISSIONSTRING_1081"};
+	};
+	
+	class d_score_needed_to_fly {
+		title = "$STR_DOM_MISSIONSTRING_2058";
+		values[] = {-1, 100, 500, 1000, 2000, 5000};
+		default = 1000;
+		texts[] = {"$STR_DOM_MISSIONSTRING_1063","100","500","1000","2000","5000"};
 	};
 
 	class d_without_nvg {
