@@ -1,2 +1,4 @@
 STR_DOM_MISSIONSTRING_1575
 STR_DOM_MISSIONSTRING_2057
+STR_DOM_MISSIONSTRING_2058
+STR_DOM_MISSIONSTRING_2059
