@@ -27,3 +27,5 @@ STR_DOM_MISSIONSTRING_2054
 STR_DOM_MISSIONSTRING_2055
 STR_DOM_MISSIONSTRING_2056
 STR_DOM_MISSIONSTRING_2057
+STR_DOM_MISSIONSTRING_2058
+STR_DOM_MISSIONSTRING_2059
